docs/wwwroot/visualizer/css/app.css
body {
    height: 100vh;
    margin: 0;
    padding: 0;
}

.popupOverlay {
    background-color: rgba(0, 0, 0, 0.1);
    position: absolute;
    left: 0;
    top: 0;
    z-index: 100000;
}

.popupCardContainer {
    position: absolute;
    background-color: white;
    box-shadow: 0 0 15px -5px rgba(0,0,0,.4);
    padding: 20px;
    width: 300px;
}

.errorContainer {
    background-color: red;
    color: white;
    padding: 4px 8px 4px 8px;
    margin-bottom: 20px;
}

.uiRoot {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-flow: column;
            flex-flow: column;
    height: inherit;
}

.uiHeader {
    -webkit-box-flex: 0;
        -ms-flex: 0 0 auto;
            flex: 0 0 auto;
    padding: 10px;
    background-color: #EAEAEA;
}

.uiFooter {
    -webkit-box-flex: 0;
        -ms-flex: 0 0 auto;
            flex: 0 0 auto;
    margin: 0px 10px 10px 10px;
}

.cardEditor {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    height: 100%;
    min-height: 0;
    margin: 10px;
}

.leftPane {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-flow: column;
            flex-flow: column;
    -webkit-box-flex: 1;
        -ms-flex: 1 1 50%;
            flex: 1 1 50%;
    overflow: auto;
    margin-right: 10px;
}

.rightPane {
    -webkit-box-flex: 1;
        -ms-flex: 1 1 50%;
            flex: 1 1 50%;
    overflow: auto;
    margin-left: 10px;
}

div.markupRender {
    margin-right: 20px;
    margin-bottom: 20px;
}

#editor {
    -webkit-box-flex: 1;
        -ms-flex: 1 1 auto;
            flex: 1 1 auto;
    box-sizing: border-box;
    resize: none;
    white-space: nowrap;
    overflow: auto;
    border: 1px solid #EEEEEE;
}

.button {
    font-family: 'Segoe UI', sans-serif;
    font-size: 14px;
    font-weight: 600;
    overflow: hidden;
    text-overflow: ellipsis;
    border: none;
    padding: 4px 10px 5px 10px;
    min-width: 80px; 
    text-align: center;
    vertical-align: middle;  
    cursor: default;
    border: 1px solid #0078D7;
    background-color: #0078D7;
    color: white;    
    -webkit-user-select: none;   /* Chrome/Safari/Opera */
    -moz-user-select: none;      /* Firefox */
    -ms-user-select: none;       /* Internet Explorer/Edge */
    user-select: none;
    display: inline-block;
}

.button:hover {
    background-color: #005A9E;
}

.button:active {
    background-color: #004D84;
}

.button.subdued {
    background-color: transparent;
    color: #0078D7;
}

.button.subdued:hover {
    background-color: #0078D7;
    color: white;
}

.select {
    font-family: 'Segoe UI', sans-serif;
    font-size: 14px;
    border-color: #DDDDDD;
    border-width: 2px;
    border-style: solid;
    padding: 2px 3px 3px 3px;
}

